Ajuste para ambiente desarrollo

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,36 +1,36 @@
 version: "3.9"
 services:
-  api:
+  backend:
     build:
-      context: ../api_deportes
+      context: ../backend_omnia
       dockerfile: Dockerfile.dev
-    container_name: api_deportes
+    container_name: backend_omnia
     ports:
       - "8000:8000"
     environment:
       - ENVIRONMENT=development
     volumes:
-      - ../api_deportes:/app
+      - ../backend_omnia:/app
     depends_on:
       - db
   frontend:
     build:
-      context: ../frontend_kingtide
+      context: ../frontend_omnia
       dockerfile: Dockerfile.dev
-    container_name: frontend_kingtide
+    container_name: frontend_omnia
     ports:
       - "5173:5173"
     volumes:
-      - ../frontend_kingtide:/app
+      - ../frontend_omnia:/app
       - /app/node_modules
   db:
     image: postgres:alpine
-    container_name: deportes-db
+    container_name: omnia-db
     environment:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: postgres
     volumes:
-      - ../api_deportes/db-data:/var/lib/postgresql/data
+      - ../backend_omnia/db-data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     restart: always
